# Whyte

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Vagrantfile  index.md
demos/window/: CMakeLists.txt  Main.cpp
renderer/: CMakeLists.txt
renderer/src/: DllExport.h  Renderer.h
renderer/src/OpenGL/: RendererGL.h
sandbox/: CMakeLists.txt  Main.cpp
src/: Application.cpp  Application.h  Event.h  Includes.h  Main.cpp  Renderer.h  RendererGL.cpp  RendererGL.h  State.cpp  State.h  StateMachine.cpp  StateMachine.h  Subject.h  Whyte.h
src/Renderer/OpenGL/: RendererGL.cpp
src/core/: CMakeLists.txt
src/core/include/: Application.h  DllExport.h  Whyte.h
src/core/src/: Application.cpp  State.cpp
src/renderer/: CMakeLists.txt
src/renderer/cmake/: FindSDL2.cmake
src/renderer/include/: Renderer.h  Whyre.h
src/renderer/include/OpenGL/: Buffer.h  GLIncludes.h  RendererGL.h  Shader.h  ShaderProgram.h  VAO.h
src/renderer/include/internal/: Includes.h  Renderer.h
src/renderer/include/internal/backends/OpenGL/: RendererGL.h
src/renderer/src/OpenGL/: Buffer.cpp  RendererGL.cpp  Shader.cpp  ShaderProgram.cpp  VAO.cpp
tests/: CMakeLists.txt  ExampleTest.cpp  Main.cpp
